# clip-content-gen

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PIPELINE_B_CLIP_FACTORY.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_campaign_type.py  (+5 more)
plans/: pipeline-a-stage-1-foundation.md  pipeline-a-stage-2-ingester.md  pipeline-a-stage-3-scoring.md  pipeline-a-stage-4-discord-bot.md  pipeline-b-stage-1-extraction.md  pipeline-b-stage-2-acquisition.md  pipeline-b-stage-3-clip-production.md  pipeline-b-stage-4-review-dashboard.md  pipeline-b-stage-4.5-vizard-bridge.md  pipeline-b-stage-5-cost-retention.md
tests/: conftest.py  test_acquire_base.py  test_acquire_campaign_provided.py  test_acquire_download.py  test_acquire_passthrough.py  test_acquire_retention.py  test_acquire_run.py  test_acquire_storage.py  test_acquire_url.py  test_acquire_vod.py  test_alert_model.py  test_alert_state.py  test_alerts_e2e.py  test_b5_minors.py  test_base_ingester.py  test_batch_resilience.py  test_board_eligibility.py  test_budget_health.py  test_cli.py  test_cli_clip.py  test_clip_base.py  test_clip_caption.py  test_clip_cost.py  test_clip_cost_gate.py  test_clip_est_minutes.py  test_clip_match.py  test_clip_produce.py  test_clip_retention.py  test_clip_videotype.py  test_clip_vizard.py  test_clipfactory.py  test_coerce.py  test_config.py  test_config_acquire.py  test_config_alerts.py  test_config_extraction.py  test_config_source.py  test_contentrewards.py  test_dashboard_manual_source.py  test_detect.py  (+49 more)
(+69 files in other folders)
