[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipscore"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/clipscore"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
