[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipscore"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "structlog>=24.1",
    "httpx>=0.27,<0.29",
    "apscheduler>=3.10,<4.0",
    "discord.py>=2.3,<3.0",
    "fastapi>=0.110,<0.116",
    "uvicorn>=0.29,<0.35",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
media = ["yt-dlp>=2024.8"]   # optional; VOD acquirers only, lazy-imported. Pin the exact version at install time — yt-dlp breaks often.

[project.scripts]
clipscore = "clipscore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipscore"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
